app/assets/stylesheets/application.scss
@import 'joyride/joyride-2.1';
@import 'select2';
@import 'select2-bootstrap';
@import 'jquery.atwho';
@import 'jqcloud';

@import 'mobile-first';
@import 'navbar';
@import 'autocomplete';
@import 'chat';
@import 'feed';
@import 'user-style';
@import 'search';
@import 'notification';
@import 'material-colors';

@import 'material';

.material-icons.md-15 {
  font-size: 15px;
  width: 15px;
  height: 15px;
  vertical-align: baseline;
}

.material-icons.md-18 {
  font-size: 18px;
  width: 18px;
  height: 18px;
  vertical-align: baseline;
}

.material-icons.md-24 {
  font-size: 24px;
  width: 24px;
  height: 24px;
  vertical-align: baseline;
}

@import 'bootstrap-sprockets';
@import 'bootstrap-custom';

@import 'material-colors-override';
@import 'font-gotham';

.invite-button {
  margin-top: -4px;
}

.modal-body > div {
  padding-top: 0;
  margin-top: -5px;
}

.modal-body > div > button {
  margin-top: 5px;
}

.alert .timestamp {
  color: $timestamp-color;
  font-size: 70%;
  font-weight: normal;
  float: right;
}

// Jumbotron material desing

.frontpage-jumbotron {
  background: image-url('bg.jpg') center / cover;
  height: 100vh;
  width: 100%;
  color: $white;

  h1 {
    word-wrap: break-word;
  }
  .middle {
    padding-top: 150px;
  }
}

.panel-title {
  word-wrap: break-word;
}

// other

.flow-alert {
  background-color: $success;
  margin-bottom: 0;
  position: absolute;
  top: 75px;
  z-index: 2000;
  margin: 0 auto;
  left:0;
  right:0;
  width: 80%;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
}

#collapseAlert {
  margin-bottom: 0;
}

.modal-footer {
  border-top: 0 solid #fff;
}

.modal-header {
  border-bottom: 0 solid #fff;
}

.autoModal.modal {
  max-width: 100%;
}

.modal-dialog.autoModal {
  width: 80%;
  height: 80%;
}

.modal-image {
  height: 60vh;
  background-repeat: no-repeat;
  background-size: contain;
  padding-bottom: 10px;
}

.about-headers {
  h2 {
    text-transform: none;
  }
}

.search-small-font {
  font-size: 80%;
  font-style: italic;
}

textarea:focus,
input[type="text"]:focus {
  outline: none !important;
}

.mdl-button {
  text-decoration: none !important;
}

